[gd_scene load_steps=11 format=3 uid="uid://bummrjixce2qk"]

[ext_resource type="Script" path="res://mob1.gd" id="1_qb223"]
[ext_resource type="Texture2D" uid="uid://dmms2gt5clihc" path="res://SpaceShooterAssets/SpaceShooterAssetPack_Ships.png" id="1_x1ua0"]
[ext_resource type="PackedScene" uid="uid://dbfsmrg1r6aiy" path="res://enemy_bulletprefab.tscn" id="2_8ir0e"]
[ext_resource type="Texture2D" uid="uid://80t5n2e38nca" path="res://SpaceShooterAssets/SpaceShooterAssetPack_Miscellaneous.png" id="2_bqcpd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g0l3l"]
size = Vector2(30, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_qi37e"]
atlas = ExtResource("2_bqcpd")
region = Rect2(96, 48, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldtj8"]
atlas = ExtResource("2_bqcpd")
region = Rect2(88, 48, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_0s6no"]
atlas = ExtResource("2_bqcpd")
region = Rect2(80, 48, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pbo1"]
atlas = ExtResource("1_x1ua0")
region = Rect2(32, 8, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_dviqa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qi37e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldtj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0s6no")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldtj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qi37e")
}],
"loop": true,
"name": &"destroy",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pbo1")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="mob1" type="Area2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_qb223")
shoot = ExtResource("2_8ir0e")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_g0l3l")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_dviqa")
animation = &"idle"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="damage" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="destroy" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="shoot_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="damage" to="." method="_on_damage_timeout"]
[connection signal="timeout" from="destroy" to="." method="_on_destroy_timeout"]
[connection signal="timeout" from="shoot_timer" to="." method="_on_shoot_timer_timeout"]
